[package]
name = "airlift-wifi"
version = "0.1.0"
edition = "2018"
authors = ["Lachlan Sneff <lachlan@charted.space>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal =  { version = "0.2.5", features = ["unproven"] }
heapless = "0.7.3"
